<resources>
    <string name="app_name">CalUber Prototype</string>
    <string name="title_activity_basket">BasketActivity</string>
    <string name="user_profile">UserProfile</string>
    <string name="date_text">Date</string>
    <string name="time_text">Time</string>
    <string name="s_l_text">Starting Location</string>
    <string name="des_text">Destination</string>
    <string name="n_p_text">Number of Passengers</string>
    <string name="create_button">Create</string>
    <string name="CreateARidePage">Create A Ride</string>
    <string name="pick_date">Pick Date</string>
    <string name="create_a_ride">Create A Ride</string>
    <string name="enter_time">Click here to enter time </string>
    <string name="start_destination_text">Write starting location here</string>
    <string name="write_here_dest">write destination here</string>
    <string name="enter_number">Enter number</string>
    <string name="caluber">CalUber</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="calvin_id">Calvin id</string>
    <string name="create_prompt">Create a username and password</string>
    <string name="datePicker">datePicker</string>
    <string name="CreateRideMessage">Your ride is created!</string>
    <string name="CreateARideFailedMsg">Please fill out all fields</string>
    <string name="PM">PM</string>
    <string name="AM">AM</string>
    <string-array name = "numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
