<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="5">

            <Button
                android:id="@+id/DateButton"
                android:layout_width="204dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_date"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:background="@color/colorAccent"
                />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/date_text"
                android:textColor="#ffff"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:background="@color/colorAccent"
                android:layout_weight = "1"/>


            <TextView
                android:id="@+id/time_text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/time_text"
                android:textColor="#ffff"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:background="@color/colorAccent"
                android:layout_weight = "2"/>

            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                android:text=""
                android:hint="@string/enter_time"/>

            <TextView
                android:id="@+id/startPointText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/s_l_text"
                android:textColor="#ffff"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:background="@color/colorAccent"
                android:layout_weight = "3"/>

            <EditText
                android:id="@+id/startPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text=""
                android:hint="@string/start_destination_text"/>

            <TextView
                android:id="@+id/des_text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/des_text"
                android:textColor="#ffff"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:background="@color/colorAccent"
                android:layout_weight = "4"/>

            <EditText
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"

                android:text=""
                android:hint="@string/write_here_dest"/>

            <TextView
                android:id="@+id/number_text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/n_p_text"
                android:textColor="#ffff"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:background="@color/colorAccent"
                android:layout_weight = "5"/>

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text=""
                android:hint= "@string/enter_number"/>

            <Button
                android:id="@+id/createARide_button"
                android:layout_width="204dp"
                android:layout_height="63dp"
                android:text="@string/create_a_ride"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:background="@color/colorAccent" />

        </LinearLayout>
</android.support.constraint.ConstraintLayout>